--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -82,6 +82,7 @@
         }
 
         #maccabi {
+            font-family: 'complet-bold', sans-serif;
             font-size: 8rem;
             font-weight: bold;
             // color: $color-primary;
