--- a/scss/layout/_thank-you-page.scss
+++ b/scss/layout/_thank-you-page.scss
@@ -81,7 +81,7 @@
 
       &-text {
         color: $color-white;
-        font-family: "adoveFnt22-bold", sans-serif;
+        font-family: "complet-bold", sans-serif;
         font-size: 4.5vw;
         line-height: 4.3vw;
         overflow: hidden;
@@ -104,7 +104,7 @@
 
     &__bottom {
       &-text {
-        font-family: "adoveFnt22-bold", sans-serif;
+        font-family: "complet-bold", sans-serif;
         font-size: 4.5vw;
         line-height: 4.3vw;
 
@@ -130,7 +130,7 @@
   &__left {
     display: flex;
     align-items: flex-end;
-    font-family: "adoveFnt22-bold", sans-serif;
+    font-family: "complet-bold", sans-serif;
 
     @include respond(tab-port) {
       align-self: center;
@@ -159,7 +159,7 @@
   flex-direction: column;
   align-items: center;
   padding: 10rem 3rem;
-  font-family: "adoveFnt22-bold", sans-serif;
+  font-family: "complet-bold", sans-serif;
 
   @include respond(small-desktop) {}
 
@@ -239,7 +239,7 @@
   }
 
   &-text {
-    font-family: "adoveFnt22", sans-serif;
+    font-family: "complet", sans-serif;
     font-size: 7rem;
     margin-bottom: 13rem;
 
