--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -1,8 +1,20 @@
 .logo {
+    // position: absolute;
+    // margin-block-start: auto;
+    // right: 1rem;
+    // top: 1rem;
+    z-index: 1;
     position: absolute;
     margin-block-start: auto;
     right: 1rem;
     top: 1rem;
+    background: white;
+    width: 8rem;
+    height: 8rem;
+    object-fit: contain;
+    border-radius: 30% 50% 20% 50%;
+    padding: 1rem;
+    animation: changingBorderRadius 2s infinite linear;
 
     @include respond(tab-port) {
         position: absolute;
