change images to webp

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -78,7 +78,7 @@ body {
   max-width: 1920px;
   margin-inline: auto;
 
-  background-image: url(../images/back.jpeg);
+  background-image: url(../images/back.webp);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
