small css changes

--- a/scss/base/_typogrophy.scss
+++ b/scss/base/_typogrophy.scss
@@ -29,7 +29,7 @@ body {
 img {
   font-size: 1rem;
 
-  @include respond(mini-desktop) {
+  @include respond(tab-port) {
     font-size: 3rem;
   }
 }
@@ -56,7 +56,7 @@ h3 {
   line-height: 3rem;
   letter-spacing: 0.03rem;
 
-  @include respond(mini-desktop) {
+  @include respond(tab-port) {
     font-size: 4.1rem;
     line-height: initial;
     letter-spacing: 0.03rem;
@@ -71,7 +71,7 @@ p {
   font-size: 0.9rem;
   line-height: 1rem;
 
-  @include respond(mini-desktop) {
+  @include respond(tab-port) {
     font-size: 3rem;
   }
 
