--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -65,31 +65,17 @@
         align-items: center;
         // margin-block-start: 2rem;
 
-        #basad {
-            font-size: 2.5rem;
-            line-height: 2rem;
-            font-weight: bold;
-            // color: $color-primary;
-            color: $color-white;
-            // margin-top: 2.5rem;
-
-            @include respond(tab-port) {
-                font-size: 4.5rem;
-                line-height: 4rem;
-            }
-        }
-
         .details {
             font-size: 4rem;
             font-weight: bold;
-            line-height: 3rem;
+            line-height: 5rem;
             // color: $color-secondary;
             color: $color-white;
             margin-top: 30px;
 
             @include respond(tab-port) {
                 font-size: 10rem;
-                line-height: 9rem;
+                line-height: 11rem;
             }
         }
 
@@ -99,11 +85,11 @@
             font-weight: bold;
             // color: $color-primary;
             color: $color-white;
-            line-height: 8rem;
+            line-height: 9rem;
 
             @include respond(tab-port) {
                 font-size: 25rem;
-                line-height: 24rem;
+                line-height: 26rem;
             }
         }
     }
@@ -138,7 +124,7 @@
     }
 
     &-input {
-        font-size: 0.9rem;
+        font-size: 1.5rem;
         width: 18rem;
         height: 3.2rem;
         padding-inline-start: 1rem;
@@ -172,6 +158,10 @@
             @include respond(tab-port) {
                 margin-block-start: 2rem;
             }
+        }
+
+        &::placeholder {
+            color: $color-black;
         }
 
         &.select {
@@ -216,6 +206,9 @@
     }
 
     &-message {
+        position: absolute;
+        right: 0;
+
         opacity: 0;
         width: 100%;
         margin-block-start: 1rem;
@@ -237,9 +230,19 @@
             background: $error-bg;
             text-align: center;
             border-radius: 20px;
-            padding: 2rem;
+            padding: 1rem;
             margin-top: 1rem;
             line-height: initial;
+            font-size: 1.5rem;
+
+
+            @include respond(tab-port) {
+                font-size: 4.5rem;
+            }
+        }
+
+        &:empty {
+            display: none;
         }
     }
 }
@@ -259,35 +262,35 @@
     &-top {
         width: 550px;
         height: 400px;
-        border-top-left-radius: 30% 60%;
-        border-top-right-radius: 50% 40%;
-        border-bottom-left-radius: 30% 40%;
-        border-bottom-right-radius: 70% 60%;
+        border-start-start-radius: 50% 40%;
+        border-start-end-radius: 30% 60%;
+        border-end-start-radius: 70% 60%;
+        border-end-end-radius: 30% 40%;
 
         @include respond(tab-port) {
             width: 90rem;
             height: 85rem;
             margin-top: -13rem;
             padding-block-start: 15rem;
-            border-bottom-right-radius: 70% 40%;
+            border-end-end-radius: 70% 60%;
         }
     }
 
     &-bottom {
         margin-inline-start: 25rem;
-        border-top-left-radius: 70% 60%;
-        border-top-right-radius: 30% 40%;
-        border-bottom-right-radius: 30% 60%;
-        border-bottom-left-radius: 70% 40%;
+        border-start-start-radius: 30% 40%;
+        border-start-end-radius: 70% 60%;
+        border-end-start-radius: 30% 60%;
+        border-end-end-radius: 70% 40%;
 
         @include respond(tab-port) {
             margin-inline-start: 0rem;
             width: 94vw;
             height: auto;
-            border-top-left-radius: 5% 5%;
-            border-top-right-radius: 5% 5%;
-            border-bottom-right-radius: 0;
-            border-bottom-left-radius: 0;
+            border-start-start-radius: 5% 5%;
+            border-start-end-radius: 5% 5%;
+            border-end-start-radius: 0;
+            border-end-end-radius: 0;
 
             // background-image: linear-gradient(19deg, $color-primary 0%, $color-secondary 100%);
             background-image: linear-gradient(19deg, #08428f 0%, #26abe1de 100%);
