add logical css

--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -65,6 +65,12 @@
         align-items: center;
         // margin-block-start: 2rem;
 
+        #basad {
+            color: $color-white;
+            font-size: 2.5rem;
+            line-height: 2rem
+        }
+
         .details {
             font-size: 4rem;
             font-weight: bold;
