--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -210,7 +210,7 @@
     }
 
     &-submit {
-        @include global-btn($color-white, $color-secondary, $color-black);
+        @include global-btn($color-white, $color-secondary, $color-secondary);
         // width: 18rem;
         width: 100%;
         height: 3.2rem;
@@ -220,6 +220,8 @@
         border-radius: 31px;
         background-color: $color-secondary;
         border: none;
+        font-family: 'ploni-bold', sans-serif;
+        font-size: 1.5rem;
 
         @include respond(tab-port) {
             font-size: 6rem;
