change error style

--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -39,6 +39,7 @@
 
 .cta {
     &-section {
+        position: relative;
         // border: 1px solid blue;
         max-width: 1920px;
         margin: auto;
@@ -46,6 +47,7 @@
         margin-inline-end: 0;
         margin-block-start: 14rem;
         margin-block-end: 4rem;
+        overflow: visible;
 
         @include respond(tab-port) {
             width: 100%;
@@ -263,11 +265,12 @@
             margin-top: 1rem;
             line-height: initial;
             font-size: 1.5rem;
+            top: -6rem;
 
             @include respond(tab-port) {
                 font-size: 4.5rem;
-                font-size: 4.5rem;
-                top: 55%;
+                // top: 55%;
+                top: -12rem;
                 width: 80%;
                 right: 50%;
                 transform: translate(50%, 0);
