--- a/scss/layout/main-page/_cta-section.scss
+++ b/scss/layout/main-page/_cta-section.scss
@@ -52,6 +52,7 @@
         @include respond(tab-port) {
             width: 100%;
             margin-block-start: 2rem;
+            margin-block-end: 10rem;
         }
     }
 
@@ -288,6 +289,33 @@
 
         &:empty {
             display: none;
+        }
+    }
+}
+
+.footer-section {
+    .logo-convert {
+        position: absolute;
+        left: 5rem;
+        bottom: 0rem;
+        cursor: pointer;
+
+        @include respond(tab-port) {
+            left: 50%;
+            bottom: 5rem;
+            transform: translateX(-50%);
+        }
+
+        &>img {
+            width: 9rem;
+            height: auto;
+            cursor: pointer;
+
+            @include respond(tab-port) {
+                width: 30rem;
+                height: auto;
+                cursor: pointer;
+            }
         }
     }
 }
